--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   appwrite: ^13.0.0
+  flutter_svg: ^2.0.16
 
 dev_dependencies:
   flutter_test:
