Add Failure class and type definitions
Introduce a `Failure` class to handle errors with a message and stack trace. Also, add type definitions for `FutureEither`, `FutureEitherVoid`, and `FutureVoid` using `fpdart`. Update `pubspec.yaml` and `pubspec.lock` to include `flutter_riverpod` and `fpdart` dependencies.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   cupertino_icons: ^1.0.8
   appwrite: ^13.0.0
   flutter_svg: ^2.0.16
+  flutter_riverpod: ^2.6.1
+  fpdart: ^1.1.1
 
 dev_dependencies:
   flutter_test:
